# xash3d-sdk

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
bindgen/: wrapper-xash.h
crates/allocator/: Cargo.toml  lib.rs
crates/cell/: Cargo.toml  lib.rs
crates/math/: Cargo.toml  lib.rs  vector.rs
crates/utils/: Cargo.toml  allocator.rs  lib.rs  logger.rs  macros.rs  str.rs
engine/client/: Cargo.toml  collections.rs  cvar.rs  efx.rs  engine.rs  entity.rs  event.rs  export.rs  file.rs  global_state.rs  input.rs  instance.rs  lib.rs  logger.rs  macros.rs  message.rs  prelude.rs  raw.rs  render.rs  screen.rs  sprite.rs  studio.rs  user_message.rs  utils.rs
engine/client/engine/: demo.rs  efx.rs  event.rs  tri.rs
engine/player-move/: Cargo.toml  debug.rs  lib.rs  raw.rs
engine/ref/: Cargo.toml  buffer.rs  consts.rs  cvar.rs  engine.rs  engine_types.rs  export.rs  globals.rs  instance.rs  lib.rs  logger.rs  prelude.rs  raw.rs  render.rs  texture.rs  utils.rs
engine/ref/engine/: draw.rs
engine/ref/examples/: ref-stub.rs
engine/ref/raw/: filesystem.rs  vgui.rs
engine/server/: Cargo.toml  change_level.rs  changelevel.rs  consts.rs  cvar.rs  engine.rs  engine_types.rs  entities.rs  entity.rs  export.rs  game_rules.rs  global_state.rs  globals.rs  instance.rs  lib.rs  logger.rs  macros.rs  prelude.rs  private.rs  raw.rs  save.rs  sound.rs  str.rs  svc.rs  time.rs  user_message.rs  utils.rs
engine/server-derive/: Cargo.toml  lib.rs  save_restore.rs
engine/server/entities/: ambient_generic.rs  bmodels.rs  breakable.rs  buttons.rs  delayed_use.rs  doors.rs  effects.rs  env_bubbles.rs  env_debris.rs  env_explosion.rs  env_fade.rs  env_glow.rs  env_message.rs  env_render.rs  env_shake.rs  env_sound.rs  env_spark.rs  env_sprite.rs  explode.rs  func.rs  func_button.rs  func_door.rs  func_friction.rs  func_illusionary.rs  func_ladder.rs  func_pendulum.rs  func_plat.rs  func_rot_button.rs  func_rotating.rs  func_tracktrain.rs  func_train.rs  func_wall.rs  func_wall_toggle.rs  info_landmark.rs  info_node.rs  info_player_deathmatch.rs  info_player_start.rs  info_target.rs  infodecal.rs  item.rs  (+36 more)
engine/server/entity/: macros.rs  private_data.rs  vars.rs
engine/server/examples/: server-custom-trait.rs  server-stub.rs
engine/server/global_state/: decals.rs  sprites.rs
engine/server/save/: cursor.rs  derive.rs  macros.rs  save_restore_data.rs
engine/shared/: Cargo.toml  borrow.rs  bsp.rs  cell.rs  color.rs  consts.rs  cvar.rs  engine.rs  engine_private.rs  entity.rs  export.rs  file.rs  global_state.rs  input.rs  lib.rs  logger.rs  macros.rs  math.rs  message.rs  misc.rs  model.rs  parser.rs  prelude.rs  raw.rs  render.rs  sound.rs  str.rs  user_message.rs  utils.rs
engine/shared/bindgen/: bindgen.sh  wrapper.h
engine/shared/engine/: net.rs  str.rs
engine/shared/raw/: bsp.rs  vector.rs
engine/ui/: Cargo.toml  consts.rs  cvar.rs  engine.rs  engine_types.rs  export.rs  file.rs  game_info.rs  globals.rs  instance.rs  lib.rs  logger.rs  picture.rs  prelude.rs  rand.rs  raw.rs  utils.rs
engine/ui/examples/: menu-stub.rs
entities/all/: Cargo.toml
entities/all/src/: env_bubbles.rs  env_debris.rs  env_explosion.rs  env_fade.rs  env_glow.rs  env_message.rs  env_render.rs  env_shake.rs  env_sound.rs  env_spark.rs  env_sprite.rs  func_friction.rs  func_illusionary.rs  func_ladder.rs  func_pendulum.rs  func_rotating.rs  func_wall.rs  func_wall_toggle.rs  func_water.rs  info_landmark.rs  info_node.rs  info_node_air.rs  info_player_deathmatch.rs  info_player_start.rs  info_target.rs  info_teleport_destination.rs  infodecal.rs  item.rs  lib.rs  light.rs  light_environment.rs  light_spot.rs  macros.rs  multi_manager.rs  multisource.rs  player.rs  spark_shower.rs  speaker.rs  stub.rs  target_cdaudio.rs  (+16 more)
entities/ambient/: Cargo.toml
entities/ambient/src/: ambient_generic.rs  lib.rs
entities/beam/: Cargo.toml
entities/beam/src/: beam.rs  env_beam.rs  env_laser.rs  env_lightning.rs  lib.rs
entities/button/: Cargo.toml
entities/button/src/: base_button.rs  func_button.rs  func_rot_button.rs  lib.rs
entities/door/: Cargo.toml
entities/door/src/: base_door.rs  func_door.rs  func_door_rotating.rs  lib.rs
entities/platform/: Cargo.toml
entities/platform/src/: func_plat.rs  func_platrot.rs  lib.rs
entities/sprite/: Cargo.toml
entities/sprite/src/: env_sprite.rs  lib.rs
entities/tracktrain/: Cargo.toml
entities/tracktrain/src/: func_tracktrain.rs  lib.rs  path_track.rs
entities/train/: Cargo.toml
entities/train/src/: func_train.rs  lib.rs  path_corner.rs
games/half-life/client/: Cargo.toml  camera.rs  entity.rs  events.rs  export.rs  helpers.rs  hud.rs  input.rs  lib.rs  studio.rs  view.rs  weapons.rs
games/half-life/client/events/: crossbow.rs  crowbar.rs  egon.rs  gauss.rs  glock.rs  hgun.rs  mp5.rs  python.rs  rpg.rs  shotgun.rs  snark.rs  train.rs  tripmine.rs
games/half-life/client/hud/: ammo.rs  battery.rs  death_notice.rs  flashlight.rs  geiger.rs  health.rs  history.rs  inventory.rs  menu.rs  message.rs  say_text.rs  scoreboard.rs  text_message.rs  train.rs  weapon_menu.rs
games/half-life/resources/: Cargo.toml  lib.rs  valve.rs
games/half-life/server/: Cargo.toml  cvar.rs  entities.rs  entity.rs  export.rs  game_rules.rs  gamerules.rs  global_state.rs  lib.rs  macros.rs  player.rs  private_data.rs  save.rs  sound.rs  todo.rs  triggers.rs  user_message.rs  world.rs
games/half-life/server/entities/: barney.rs  bmodels.rs  buttons.rs  effects.rs  env_beverage.rs  gman.rs  healthkit.rs  item_battery.rs  item_sodacan.rs  item_suit.rs  lights.rs  monster_barnacle.rs  monster_bullchicken.rs  monster_headcrab.rs  monster_houndeye.rs  monster_zombie.rs  monstermaker.rs  nodes.rs  player.rs  scientist.rs  subs.rs  world_items.rs
games/half-life/shared/: Cargo.toml  lib.rs  user_message.rs  weapons.rs
games/half-life/shared/weapons/: crossbow.rs  crowbar.rs  egon.rs  gauss.rs  glock.rs  hgun.rs  mp5.rs  python.rs  rpg.rs  shotgun.rs  snark.rs  tripmine.rs
tools/: Cargo.toml  gen-resources.rs
