[workspace]
resolver = "2"
members = [
    "crates/*",
    "engine/*",
    "games/half-life/*",
]
exclude = ["tools"]

[workspace.package]
license = "LGPL-3.0-only"
authors = ["Denis Drakhnia <numas13@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "forbid"

[workspace.dependencies]
bitflags = "2.6"
log = "0.4"
libc = "0.2.172"
libm = "0.2.15"
csz = { version = "0.3.0", features = ["alloc"] }
xash3d-ffi = "0.1.0"
xash3d-allocator = { version = "0.1.0", path = "crates/allocator" }
xash3d-shared = { version = "0.1.0", path = "engine/shared" }
xash3d-player-move = { version = "0.1.0", path = "engine/player-move" }
cl = { package = "xash3d-client", version = "0.1.0", path = "engine/client" }
sv = { package = "xash3d-server", version = "0.1.0", path = "engine/server" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
