[workspace]
resolver = "3"
members = [
    "crates/*",
    "engine/*",
    "entities/*",
    "games/half-life/*",
]
exclude = ["tools"]

[workspace.package]
license = "LGPL-3.0-only"
authors = ["Denis Drakhnia <numas13@gmail.com>"]
edition = "2024"
rust-version = "1.86"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "forbid"

[workspace.dependencies]
bitflags = "2.6"
log = "0.4"
libc = "0.2.172"
libm = "0.2.15"
csz = { version = "0.3.0", features = ["alloc"] }
xash3d-ffi = { version = "0.2", default-features = false, features = ["all", "glam"] }
xash3d-allocator = { version = "0.1.0", path = "crates/allocator" }
xash3d-shared = { version = "0.1.0", path = "engine/shared" }
xash3d-player-move = { version = "0.1.0", path = "engine/player-move" }
xash3d-client = { version = "0.1.0", path = "engine/client" }
xash3d-server = { version = "0.1.0", path = "engine/server" }
xash3d-server-derive = { version = "0.1.0", path = "engine/server-derive" }
xash3d-entities = { version = "0.1.0", path = "entities/all" }
res = { package = "xash3d-hl-resources", path = "games/half-life/resources" }
xash3d-hl-shared = { version = "0.1.0", path = "games/half-life/shared" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
