[package]
name = "xash3d-math"
version = "0.1.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "lib.rs"

[features]
# Use libm crate for float math instead of C math library.
libm = ["dep:libm"]

[lints]
workspace = true

[dependencies]
libm = { version = "0.2.15", optional = true }
