[package]
name = "xash3d-utils"
version = "0.1.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
log.workspace = true
csz.workspace = true
cell.workspace = true
libc.workspace = true

[lints]
workspace = true
