[package]
name = "xash3d-client"
version = "0.1.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
log.workspace = true
bitflags.workspace = true
csz.workspace = true
cell.workspace = true
math.workspace = true
utils.workspace = true
shared.workspace = true

[lints]
workspace = true
