[package]
name = "xash3d-client"
version = "0.1.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = []
std = ["xash3d-shared/std"]
libm = ["xash3d-shared/libm"]

[lib]
path = "lib.rs"

[dependencies]
log.workspace = true
bitflags.workspace = true
xash3d-shared.workspace = true
xash3d-player-move.workspace = true

[lints]
workspace = true
