[package]
name = "xash3d-player-move"
version = "0.1.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "lib.rs"

[features]
#default = ["debug"]
debug = []

[lints]
workspace = true

[dependencies]
log.workspace = true
bitflags.workspace = true
xash3d-shared.workspace = true
