[package]
name = "xash3d-ref"
version = "0.1.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
log.workspace = true
bitflags.workspace = true
xash3d-shared.workspace = true
libc.workspace = true

[lints]
workspace = true

[[example]]
name = "ref-stub"
crate-type = ["cdylib"]
