[package]
name = "xash3d-server-derive"
version = "0.1.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.101"
quote = "1.0.41"
syn = "2.0.106"

[lints]
workspace = true
