[package]
name = "xash3d-server"
version = "0.1.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["save"]

std = ["xash3d-shared/std"]
libm = ["xash3d-shared/libm"]

# enable save/restore
save = ["dep:xash3d-server-derive"]

[lib]
path = "lib.rs"

[dependencies]
log.workspace = true
bitflags.workspace = true
csz.workspace = true
xash3d-shared.workspace = true
xash3d-player-move.workspace = true
xash3d-server-derive = { workspace = true, optional = true }
res.workspace = true

[dev-dependencies]
xash3d-entities.workspace = true

[lints]
workspace = true

[[example]]
name = "server-stub"
crate-type = ["cdylib"]

[[example]]
name = "server-custom-trait"
crate-type = ["cdylib"]
