[package]
name = "xash3d-shared"
version = "0.1.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
bitflags.workspace = true
log.workspace = true
csz.workspace = true
cell.workspace = true
math.workspace = true
