[package]
name = "xash3d-shared"
version = "0.1.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["libm"]
std = ["xash3d-ffi/std"]
# Use libm crate for float math instead of C math library.
libm = ["xash3d-ffi/libm", "dep:libm"]

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
bitflags.workspace = true
log.workspace = true
csz.workspace = true
xash3d-ffi.workspace = true
libm = { workspace = true, optional = true }
