[package]
name = "xash3d-ui"
version = "0.1.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "lib.rs"

[features]
std = []

[dependencies]
log.workspace = true
bitflags.workspace = true
csz.workspace = true
shared.workspace = true

[lints]
workspace = true

[[example]]
name = "menu-stub"
crate-type = ["cdylib"]
