[package]
name = "xash3d-hl-client"
version = "0.1.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["client-weapons", "libm"]
std = ["xash3d-client/std"]
libm = ["xash3d-client/libm"]
client-weapons = []

[lib]
name = "client"
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
libc.workspace = true
log.workspace = true
bitflags.workspace = true
xash3d-player-move.workspace = true
xash3d-client.workspace = true
xash3d-allocator.workspace = true
xash3d-hl-shared.workspace = true
res = { package = "xash3d-hl-resources", path = "../resources" }
