[package]
name = "xash3d-hl-server"
version = "0.1.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["client-weapons"]
client-weapons = []

[lib]
name = "hl"
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
log.workspace = true
bitflags.workspace = true
csz.workspace = true
pm.workspace = true
sv.workspace = true
res = { package = "xash3d-hl-resources", path = "../resources" }
