[package]
name = "xash3d-hl-server"
version = "0.1.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["client-weapons"]
std = []
client-weapons = []

[lib]
name = "hl"
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
log.workspace = true
bitflags.workspace = true
csz.workspace = true
libc.workspace = true
xash3d-player-move.workspace = true
xash3d-server = { workspace = true, features = ["export-default-entities", "export-stubs"] }
xash3d-allocator.workspace = true
xash3d-hl-shared.workspace = true
res.workspace = true
